update: svelte supported

--- a/angular-contact/src/app/app.component.html
+++ b/angular-contact/src/app/app.component.html
@@ -3,14 +3,14 @@
     <img
       [src]="angularIcon"
       class="w-40 h-40 hover:rotate-180 transition-transform duration-1000"
-      alt="Vite logo"
+      alt="Angular logo"
     />
   </a>
-  <a href="https://vuejs.org/" target="_blank">
+  <a href="https://webpack.js.org/" target="_blank">
     <img
       [src]="webpackIcon"
       class="w-40 h-40 hover:rotate-180 transition-transform duration-1000"
-      alt="Vue logo"
+      alt="Webpack logo"
     />
   </a>
 </div>
